# slambook2

ch2/: CMakeLists.txt
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
